<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="main_image_description">Large download icon</string>

    <string name="select_file">Please select the file to download</string>
    <string name="input_valid_url">Please input a valid URL</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description_success">The %1$s repository download succeeded</string>
    <string name="notification_description_fail">The %1$s repository download failed</string>
    <string name="notification_description_cancel">The %1$s repository download was cancelled</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id" translatable="false">loadapp_channel</string>
    <string name="notification_channel_name" translatable="true">Download completed</string>
    <string name="notification_channel_description" translatable="true">Download completed notifications</string>

    <string name="button_name">Click me</string>
    <string name="button_download">Download</string>
    <string name="button_ok">OK</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="description_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="description_loadapp">LoadApp - Current Repository by Udacity</string>
    <string name="description_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="description_custom">Custom URL</string>
    <string name="title_glide">Glide</string>
    <string name="title_loadapp">LoadApp</string>
    <string name="title_retrofit">Retrofit</string>
    <string name="title_custom">Custom</string>

    <string name="file_name">File name:</string>
    <string name="size">Size:</string>
    <string name="type">Type:</string>
    <string name="status">Status:</string>
    <string name="status_successful">Successful</string>
    <string name="status_failed">Failed</string>
    <string name="status_cancelled">Cancelled</string>

    <string name="size_bytes">%1$d bytes</string>
    <string name="url_hint">Type URL here</string>
    <string name="unknown">Unknown</string>
</resources>
